Bug 84613 - [G965, bisected] piglit regressions : glslparsertest.glsl2
Summary: [G965, bisected] piglit regressions : glslparsertest.glsl2
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium minor
Assignee: Matt Turner
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-10-02 23:48 UTC by Mark Janes
Modified: 2015-03-03 02:15 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Mark Janes 2014-10-02 23:48:13 UTC
a9f8296dbb4ee9fba22c4c2af625eaa29676f002 causes piglit failures on the following tests:

 glslparsertest.glsl2.gst-gl-glass.frag
 glslparsertest.glsl2.norsetto-bumptbn_sh_fp.frag

Since this won't be fixed immediately, the tests are marked as expected failures in the intel jenkins regression tool.
Comment 1 Matt Turner 2015-01-12 23:46:34 UTC
I sent a patch that fixes this:

> i965/fs: Don't use backend_visitor::exec_list after creating the CFG.
Comment 2 Matt Turner 2015-03-03 02:15:21 UTC
Fixed by

commit e214000f258ae564e64d839cccee9418526f226b
Author: Matt Turner <mattst88@gmail.com>
Date:   Tue Jan 13 15:35:57 2015 -0800

    i965/fs: Don't use backend_visitor::instructions after creating the CFG.

The following tests go from crash -> pass on gen4:

shaders/glsl-fs-sampler-numbering-2: crash pass
shaders/glsl-fs-sampler-numbering-3: crash pass
glslparsertest/glsl2/norsetto-bumptbn_sh_fp.frag: crash pass
glslparsertest/glsl2/gst-gl-glass.frag: crash pass
spec/glsl-1.10/execution/samplers/in-parameter-array: crash pass
shaders/glsl-fs-texture2d-branching: crash pass


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.